--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
+html, body {
+    height: 100%;
+}
+
 /*angular sobie wymyœla override css i wywala problemy*/
 /*body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }*/
 
@@ -18,4 +21,8 @@ mat-divider {
 
 .mat-cell {
     padding: 8px 8px 8px 8px !important;
+}
+
+#body {
+    padding-bottom: 60px !important;
 }
