--- a/client/src/app/views/ingredientCreator.component.html
+++ b/client/src/app/views/ingredientCreator.component.html
@@ -1,4 +1,4 @@
-﻿<div class="row border border-dark rounded-lg p-3 m-1">
+﻿<div class="row border border-dark rounded-lg p-3 m-1 mb-3">
     <h5 class="h3">Ingredient</h5>
     <mat-divider></mat-divider><br>
     <div class="container p-0 m-0">
@@ -11,9 +11,9 @@
             <mat-form-field>
                 <input type="text" name="prefix" [(ngModel)]="prefix" (ngModelChange)="updateIngredientList(prefix)" matInput [matAutocomplete]="auto" placeholder="Search ingredient" />
                 <mat-autocomplete #auto="matAutocomplete" panelWidth="auto" (optionSelected)="setTemplateIngredient($event.option.value)">
-                    <mat-option *ngFor="let i of creator.ingredients" [value]="i.name">
-                        {{i.name}}
-                    </mat-option>
+                        <mat-option *ngFor="let i of creator.ingredients" [value]="i.name">
+                            {{i.name}}
+                        </mat-option>
                 </mat-autocomplete>
             </mat-form-field>
         </form>
