--- a/client/src/app/views/ingredientCreator.component.html
+++ b/client/src/app/views/ingredientCreator.component.html
@@ -11,7 +11,7 @@
             <mat-form-field>
                 <input type="text" name="prefix" [(ngModel)]="prefix" (ngModelChange)="updateIngredientList(prefix)" matInput [matAutocomplete]="auto" placeholder="Search ingredient" />
                 <mat-autocomplete #auto="matAutocomplete" panelWidth="auto" (optionSelected)="setTemplateIngredient($event.option.value)">
-                        <mat-option *ngFor="let i of creator.ingredients" [value]="i.name">
+                        <mat-option *ngFor="let i of creator.searchIngredients" [value]="i.name">
                             {{i.name}}
                         </mat-option>
                 </mat-autocomplete>
