--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
 
 
     <link href="~/css/site.css" rel="stylesheet" />
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     @RenderSection("head", false)
@@ -23,9 +25,9 @@
 </head>
 <body class="bg-secondary">
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom border-dark box-shadow mb-3 shadow">
-            <div class="container">
-                <button class="navbar-toggler"
+        <nav id="header" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark mb-3">
+            <div id="navigation" class="container">
+                <button class="navbar-toggler mt-2 mb-2 p-2"
                         type="button"
                         data-toggle="collapse"
                         data-target=".navbar-collapse"
@@ -36,17 +38,17 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex">
                     <ul class="navbar-nav flex-grow-1 ml-auto">
-                        <li id="HomeNav" class="nav-item">
-                            <a class="nav-link text-light" asp-controller="App" asp-action="Index">Home</a>
+                        <li id="HomeNav" class="nav-item mr-1">
+                            <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="App" asp-action="Index">Home</a>
                         </li>
-                        <li id="RecipesNav" class="nav-item">
-                            <a class="nav-link text-light" asp-controller="App" asp-action="Recipes">Recipes</a>
+                        <li id="RecipesNav" class="nav-item mr-1">
+                            <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="App" asp-action="Recipes">Recipes</a>
                         </li>
-                        <li id="AboutNav" class="nav-item">
-                            <a class="nav-link text-light" asp-controller="App" asp-action="AboutUs">About us</a>
+                        <li id="AboutNav" class="nav-item mr-1">
+                            <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="App" asp-action="AboutUs">About Us</a>
                         </li>
                         <li id="ContactNav" class="nav-item">
-                            <a class="nav-link text-light" asp-controller="App" asp-action="Contact">Contact</a>
+                            <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="App" asp-action="Contact">Contact</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav mr-auto">
@@ -56,13 +58,13 @@
                         {
 
                             <li id="SignNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Account" asp-action="Logout">Logout</a>
+                                <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
                         }
                         else
                         {
                             <li id="SignNav" class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Account" asp-action="Login">Login</a>
+                                <a class="nav-link text-light text-center pl-3 pr-3" asp-controller="Account" asp-action="Login">Sign in</a>
                             </li>
                         }
                     </ul>
@@ -77,32 +79,33 @@
         </main>
     </div>
 
-    <footer class="footer fixed-bottom border-top border-dark bg-dark text-center">
+    <footer id="footer" class="footer fixed-bottom text-center">
         <div class="container text-muted">
-                <a class="btn btn-dark text-muted"
-                   href="#!"
-                   role="button"
-                   data-mdb-ripple-color="dark">
-                    <i class="fab fa-facebook-square fa-1x"></i>
-                </a>
+            <a id="socialBtn" class="btn text-muted"
+               href="#!"
+               role="button"
+               data-mdb-ripple-color="dark">
+                <i class="fab fa-facebook-square fa-1x"></i>
+            </a>
 
-                <a class="btn btn-dark text-muted"
-                   href="#!"
-                   role="button"
-                   data-mdb-ripple-color="dark">
-                    <i class="fab fa-twitter fa-1x"></i>
-                </a>
+            <a id="socialBtn" class="btn text-muted"
+               href="#!"
+               role="button"
+               data-mdb-ripple-color="dark">
+                <i class="fab fa-twitter fa-1x"></i>
+            </a>
 
-                <a class="btn btn-dark text-muted"
-                   href="#!"
-                   role="button"
-                   data-mdb-ripple-color="dark">
-                    <i class="fab fa-instagram fa-1x"></i>
-                </a>
+            <a id="socialBtn" class="btn text-muted"
+               href="#!"
+               role="button"
+               data-mdb-ripple-color="dark">
+                <i class="fab fa-instagram fa-1x"></i>
+            </a>
         </div>
 
         <div class="container text-muted">
-            <small>&copy; 2022 - FoodEater -&nbsp;<a asp-controller="App" asp-action="Privacy">Privacy</a></small>
+            @* Skrypt poniżej służy pobieraniu aktualnego roku *@
+            &copy; <script>document.write(/\d{4}/.exec(Date())[0])</script> - FoodEater -&nbsp;<a asp-controller="App" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
