--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,10 +1,212 @@
 ﻿
+/*BUTTONS*/
+#button {
+    font-family: 'Offside';
+    color: #eeeeee;
+    background-color: #000000;
+    border: solid 1px #eeeeee;
+    min-height: 38px !important;
+}
+
+    #button:hover {
+        color: #eeeeee !important;
+        border-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+
+    #button:focus {
+        color: #eeeeee !important;
+        border-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+
+#socialBtn {
+    font-family: 'Offside';
+    color: #eeeeee;
+    background-color: #000000;
+}
+
+    #socialBtn:hover {
+        color: #eeeeee !important;
+        background-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+
+    #socialBtn:focus {
+        color: #eeeeee !important;
+        background-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
 
 
-/*AUTOCOMPLETE SELECTORS*/
+/*NAVIGATION*/
+@font-face {
+    font-family: "Offside";
+    src: url("../font/Offside-Regular.ttf") format("truetype");
+}
+
+#header {
+    background-color: #000000;
+    padding-left: 6px !important;
+}
+
+#navigation {
+    min-height: 60px !important;
+}
+
+.navbar-toggler {
+    color: #eeeeee !important;
+    border: solid 1px !important;
+    border-color: dimgray !important;
+}
+
+    .navbar-toggler:hover {
+        border-color: rgb(255, 66, 66) !important;
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
+    }
+
+nav {
+    min-height: 50px;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+}
+
+.nav-link {
+    font-family: 'Offside';
+    min-height: 50px !important;
+    line-height: 50px;
+}
+
+@media only screen and (min-width: 768px) {
+    .nav-link:hover {
+        color: #eeeeee !important;
+        background-color: rgb(255, 66, 66);
+        border-color: rgb(255, 66, 66);
+        border-radius: 0px 0px 20px 20px;
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .nav-link:hover {
+        color: #eeeeee !important;
+        background-color: rgb(255, 66, 66);
+        border-color: rgb(255, 66, 66);
+        border-radius: 20px;
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+}
+
+
+/*FOOTER*/
+#footer {
+    font-family: 'Grand Hotel';
+    background-color: #000000;
+}
+
+@font-face {
+    font-family: "Grand Hotel";
+    src: url("../font/GrandHotel-Regular.ttf") format("truetype");
+}
+
+
+/*HOME*/
+@font-face {
+    font-family: "Cherry Swash";
+    src: url("../font/CherrySwash-Regular.ttf") format("truetype");
+}
+
+#welcome {
+    margin-top: 20%;
+    font-family: 'Cherry Swash';
+    font-size: 64px;
+    line-height: 85px;
+    align-items: center;
+    text-align: center;
+    color: #eeeeee;
+}
+
+#SearchInputRecipes {
+    font-family: 'Offside';
+    box-sizing: border-box;
+    position: absolute;
+    background: rgba(0, 0, 0, 0.7);
+    border: 5px solid #eeeeee;
+    border-radius: 85px;
+    height: 85px;
+    font-size: 30px;
+    color: #eeeeee !important;
+}
+
+    #SearchInputRecipes:hover {
+        border-color: rgb(255, 66, 66) !important;
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
+    }
+
+#SearchInputRecipesBtn {
+    font-family: 'Offside';
+    box-sizing: border-box;
+    background: #FF4242;
+    border: 5px solid #eeeeee;
+    color: #eeeeee !important;
+    border-radius: 85px;
+    height: 85px;
+    font-size: 30px;
+    min-width: 90px;
+}
+
+/* PAGINATION */
+#pagination {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+}
+
+/* BACKGROUND IMAGE */
+body {
+    background: url(../background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
+/* RECIPES */
+#recipesNav, 
+#recipesContent {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+}
+
+#recipesCard {
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+}
+
+#Recipes {
+    min-height: 38px;
+}
+
+    #Recipes #SearchInputRecipes {
+        color: #eeeeee !important;
+        font-size: 16px;
+        font-family: 'Offside';
+        height: 38px;
+        background: rgba(0, 0, 0, 0.7);
+        border: solid 1px #eeeeee;
+        border-radius: 5px;
+    }
+
+    #Recipes #SearchInputRecipes:hover {
+        border-color: rgb(255, 66, 66) !important;
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
+    }
+
+
+/* AUTOCOMPLETE SELECTORS */
 .form-control:focus {
-    border-color: rgb(91, 192, 222) !important;
-    box-shadow: 0 0 0 0.1rem rgb(91, 192, 222) !important;
+    border-color: rgb(255, 66, 66) !important;
+    box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
 }
 
 .ui-autocomplete {
@@ -14,19 +216,18 @@
     cursor: default;
     overflow-y: auto; /* prevent horizontal scrollbar */
     overflow-x: hidden; /* add padding to account for vertical scrollbar */
-
     z-index: 1000 !important;
     margin: 10px 0 0 !important;
     padding: 0 !important;
     list-style: none !important;
     font-size: 16px !important;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji" !important;
-    /* background-color: #f5f5f5 !important; */
-    border: 1px solid rgb(91, 192, 222) !important;
+    font-family: 'Offside';
+    border: 1px solid rgb(255, 66, 66) !important;
     border-radius: 4px !important;
-    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175) !important;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175) !important;
+    border-color: rgb(255, 66, 66) !important;
+    box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
     background-clip: padding-box !important;
+    border-radius: 20px !important;
 }
 
     .ui-autocomplete > li > div {
@@ -44,9 +245,12 @@
 .ui-state-active,
 .ui-state-focus {
     text-decoration: none !important;
-    color: rgb(0 0 0) !important;
-    background-color: rgb(0 0 0) !important;
+    color: rgba(0, 0, 0, 0.7) !important;
+    background-color: rgba(0, 0, 0, 0.7);
     cursor: pointer !important;
+    border-radius: 20px !important;
+    border-color: rgb(255, 66, 66) !important;
+    box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
 }
 
 .ui-helper-hidden-accessible {
@@ -68,8 +272,7 @@
 }
 
 
-#asp-validation-errors ul
-{
+#asp-validation-errors ul {
     padding-left: 0;
     list-style: none;
 }
@@ -148,8 +351,8 @@ button.accept-policy {
 }
 
 body {*/
-  /* Margin bottom by footer height */
-    /*margin-bottom: 60px;
+/* Margin bottom by footer height */
+/*margin-bottom: 60px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
