63. Added new CSS for last Views 64. Added summary to Recipe View 65. Fixed Angular CSS

--- a/Pages/Error.cshtml
+++ b/Pages/Error.cshtml
@@ -4,5 +4,10 @@
 }
 
 
-<h2>Sorry...</h2>
-<p>Some problem occured. Please try again.</p>
+<div class="row d-flex justify-content-center p-2 mt-3 mb-3">
+    <div id="error" class="col-sm-12 col-md-9 col-lg-6 m-3 p-3">
+        <h1 class="text-justify text-break m-2 p-2">Sorry...</h1>
+        <p class="text-justify text-break m-2 p-2">Some problem occured. Please try again.</p>
+    </div>
+</div>
+
