--- a/Views/App/AboutUs.cshtml
+++ b/Views/App/AboutUs.cshtml
@@ -6,4 +6,14 @@
 
 }
 
-
+<div class="row d-flex justify-content-center p-2 mt-3 mb-3">
+    <div id="aboutUs" class="col-sm-12 col-md-9 col-lg-6">
+        <p class="m-3 p-3 text-justify text-break">
+            At Foodeater, we believe that you can show the user the heart on the plate! We are a small company that combines the fields of programming and dietetics and we get the best out of both.
+            <br/><br/>
+            We make every effort to ensure that the information presented to you is reliable and crystal clear. Have fun with healthy cooking!
+            <br/><br/>
+            - Regards, Igor Kowalewski
+        </p>
+    </div>
+</div>
