--- a/Views/App/Privacy.cshtml
+++ b/Views/App/Privacy.cshtml
@@ -5,6 +5,10 @@
     @{ await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 }
 
-<h1>@ViewData["Title"]</h1>
 
-<p>Strona Igora Kowalewskiego utworzona na potrzeby projektu do pracy licencjackiej w 2022 roku.</p>
+<div class="row d-flex justify-content-center p-2 mt-3 mb-3">
+    <div id="privacyPolicy" class="col-sm-12 col-md-9 col-lg-6 m-3 p-3">
+        <h1 class="text-justify text-break m-2 p-2">@ViewData["Title"]</h1>
+        <p class="text-justify text-break m-2 p-2">Strona Igora Kowalewskiego utworzona na potrzeby projektu do pracy licencjackiej w 2022 roku.</p>
+    </div>
+</div>
