--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,30 +7,27 @@
 }
 
 
-<div class="row">
-    @*<div class="container">
-            <button class="btn btn-dark" id="loginToggle">Login</button>
-        </div>*@
-    <div class="col-md-4 offset-md-4" id="loginForm">
-        <form method="post">
-            <div asp-validation-summary="ModelOnly" class="text-warning" id="asp-validation-errors"></div>
-            <div class="form-group">
+<div class="row d-flex justify-content-center p-2 mt-3 mb-3">
+    <div class="col-12 col-sm-10 col-md-6 col-lg-4 p-2 mt-3 mb-3" id="loginForm">
+        <form method="post" class="m-2 p-2">
+            <div asp-validation-summary="ModelOnly" class="text-warning m-2 p-2" id="asp-validation-errors"></div>
+            <div class="form-group m-2 p-2">
                 <label asp-for="Username">Username</label>
                 <input asp-for="Username" class="form-control"/>
                 <span asp-validation-for="Username" class="text-warning"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group m-2 p-2">
                 <label asp-for="Password">Password</label>
                 <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-warning"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group m-2 p-2">
                 <input asp-for="RememberMe" type="checkbox" class="custom-checkbox" />
                 <label asp-for="RememberMe">Remember me</label>
                 <span asp-validation-for="RememberMe" class="text-warning"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-dark" />
+            <div class="form-group m-0 ml-2 p-2">
+                <input id="button" type="submit" value="Login" class="btn" />
             </div>
         </form>
     </div>
