--- a/client/src/custom-theme.scss
+++ b/client/src/custom-theme.scss
@@ -12,11 +12,11 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$client-primary: mat.define-palette(mat.$grey-palette, 100);
-$client-accent: mat.define-palette(mat.$indigo-palette, A200, A100, A400);
+$client-primary: mat.define-palette(mat.$grey-palette, 50);
+$client-accent: mat.define-palette(mat.$grey-palette, 50);
 
 // The warn palette is optional (defaults to red).
-$client-warn: mat.define-palette(mat.$blue-palette);
+$client-warn: mat.define-palette(mat.$grey-palette, 50);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
