--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -26,3 +26,44 @@ mat-divider {
 #body {
     padding-bottom: 60px !important;
 }
+
+#ingredientCreator {
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: block;
+}
+
+
+#addIngredientBtn {
+    color: #eeeeee;
+    background-color: #000000;
+    border: solid 1px #eeeeee;
+    min-height: 38px !important;
+}
+
+
+    #addIngredientBtn:hover,
+    #addIngredientBtn:focus {
+        color: #eeeeee !important;
+        border-color: rgb(255, 66, 66);
+        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
+    }
+
+
+/* PLACEHOLDER COLOR */
+.mat-form-field-outline, .mat-form-field-empty.mat-form-field-label, .mat-form-field-label, .mat-form-field-underline, .mat-input-element, ::placeholder
+{
+    color: #eeeeee !important;
+}
+
+
+#recipeTable {
+    font-size: 0.5rem !important;
+}
+
+
+.mat-divider {
+    border-color: #eeeeee;
+}
+
