--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,14 @@
 ﻿
+/* BACKGROUND IMAGE */
+body {
+    background: url(../background.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+
 /*BUTTONS*/
 #button {
     font-family: 'Offside';
@@ -8,17 +18,14 @@
     min-height: 38px !important;
 }
 
-    #button:hover {
-        color: #eeeeee !important;
-        border-color: rgb(255, 66, 66);
-        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
-    }
 
+    #button:hover, 
     #button:focus {
         color: #eeeeee !important;
         border-color: rgb(255, 66, 66);
         box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
     }
+
 
 #socialBtn {
     font-family: 'Offside';
@@ -26,12 +33,8 @@
     background-color: #000000;
 }
 
-    #socialBtn:hover {
-        color: #eeeeee !important;
-        background-color: rgb(255, 66, 66);
-        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
-    }
 
+    #socialBtn:hover,
     #socialBtn:focus {
         color: #eeeeee !important;
         background-color: rgb(255, 66, 66);
@@ -45,14 +48,17 @@
     src: url("../font/Offside-Regular.ttf") format("truetype");
 }
 
+
 #header {
     background-color: #000000;
     padding-left: 6px !important;
 }
 
+
 #navigation {
     min-height: 60px !important;
 }
+
 
 .navbar-toggler {
     color: #eeeeee !important;
@@ -60,16 +66,19 @@
     border-color: dimgray !important;
 }
 
+
     .navbar-toggler:hover {
         border-color: rgb(255, 66, 66) !important;
         box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
     }
+
 
 nav {
     min-height: 50px;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
 }
+
 
 .nav-link {
     font-family: 'Offside';
@@ -86,6 +95,7 @@ nav {
         box-shadow: 0 0 0 0.1rem rgb(255, 66, 66);
     }
 }
+
 
 @media only screen and (max-width: 767px) {
     .nav-link:hover {
@@ -104,6 +114,7 @@ nav {
     background-color: #000000;
 }
 
+
 @font-face {
     font-family: "Grand Hotel";
     src: url("../font/GrandHotel-Regular.ttf") format("truetype");
@@ -116,6 +127,7 @@ nav {
     src: url("../font/CherrySwash-Regular.ttf") format("truetype");
 }
 
+
 #welcome {
     margin-top: 20%;
     font-family: 'Cherry Swash';
@@ -125,6 +137,7 @@ nav {
     text-align: center;
     color: #eeeeee;
 }
+
 
 #SearchInputRecipes {
     font-family: 'Offside';
@@ -138,10 +151,12 @@ nav {
     color: #eeeeee !important;
 }
 
+
     #SearchInputRecipes:hover {
         border-color: rgb(255, 66, 66) !important;
         box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
     }
+
 
 #SearchInputRecipesBtn {
     font-family: 'Offside';
@@ -155,37 +170,29 @@ nav {
     min-width: 90px;
 }
 
-/* PAGINATION */
+
+/* RECIPES - VIEW */
+#recipesNav,
+#recipesContent,
 #pagination {
     background: rgba(0, 0, 0, 0.7);
     border-radius: 5px;
 }
 
-/* BACKGROUND IMAGE */
-body {
-    background: url(../background.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-}
-
-
-/* RECIPES */
-#recipesNav, 
-#recipesContent {
-    background: rgba(0, 0, 0, 0.7);
-    border-radius: 5px;
-}
 
 #recipesCard {
+    font-family: Calibri;
+    font-size: 0.9rem;
     border: solid 1px #eeeeee;
     border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
 }
+
 
 #Recipes {
     min-height: 38px;
 }
+
 
     #Recipes #SearchInputRecipes {
         color: #eeeeee !important;
@@ -197,10 +204,98 @@ body {
         border-radius: 5px;
     }
 
-    #Recipes #SearchInputRecipes:hover {
-        border-color: rgb(255, 66, 66) !important;
-        box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
+
+        #Recipes #SearchInputRecipes:hover {
+            border-color: rgb(255, 66, 66) !important;
+            box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
+        }
+
+
+#pagination {
+    background: rgba(0, 0, 0, 0.7);
+    border-radius: 5px;
+}
+
+
+/* RECIPE - VIEW */
+#recipeIngredientsTable {
+    font-family: Calibri;
+    color: #eeeeee;
+    font-size: 0.9rem;
+    border: 1px solid rgba(0, 0, 0, 0) !important;
+    background: rgba(0, 0, 0, 0.7) !important;
+}
+
+
+    #recipeIngredientsTable tr:hover td {
+        color: #eeeeee;
+        background: rgb(255, 66, 66);
     }
+
+
+/* ABOUT US - VIEW */
+#aboutUs {
+    font-family: 'Offside';
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* CONTACT - VIEW */
+#contactForm {
+    font-family: 'Offside';
+    font-size: 0.8rem;
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* LOGIN - VIEW */
+#loginForm {
+    font-family: 'Offside';
+    font-size: 0.8rem;
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+}
+
+
+/* CREATE - VIEW */
+#recipeCreator {
+    font-family: 'Offside';
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: block;
+}
+
+
+/* PRIVACY POLICY - VIEW */
+#privacyPolicy {
+    font-family: 'Offside';
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: block;
+}
+
+
+/* ERROR - VIEW */
+#error {
+    font-family: 'Offside';
+    border: solid 1px #eeeeee;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.7);
+    display: block;
+}
 
 
 /* AUTOCOMPLETE SELECTORS */
@@ -208,6 +303,7 @@ body {
     border-color: rgb(255, 66, 66) !important;
     box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
 }
+
 
 .ui-autocomplete {
     position: absolute;
@@ -230,6 +326,7 @@ body {
     border-radius: 20px !important;
 }
 
+
     .ui-autocomplete > li > div {
         width: 100%;
         display: block !important;
@@ -240,6 +337,7 @@ body {
         color: #333333 !important;
         white-space: nowrap !important;
     }
+
 
 .ui-state-hover,
 .ui-state-active,
@@ -252,6 +350,7 @@ body {
     border-color: rgb(255, 66, 66) !important;
     box-shadow: 0 0 0 0.1rem rgb(255, 66, 66) !important;
 }
+
 
 .ui-helper-hidden-accessible {
     border: 0 !important;
@@ -277,9 +376,11 @@ body {
     list-style: none;
 }
 
+
 #body {
     padding-bottom: 60px !important;
 }
+
 
 ::-webkit-scrollbar {
     width: 8px;
@@ -289,163 +390,8 @@ body {
     box-shadow: inset 0 0 2px #292b2c;
 }
 
+
 ::-webkit-scrollbar-thumb {
     background: #999999;
     border-radius: 10px;
 }
-
-/* Provide sufficient contrast against white background */
-/*a {
-  color: #0366d6;
-}s
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}*/
-
-/* Sticky footer styles
--------------------------------------------------- */
-/*html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.navbar {
-    color: white !important;
-    background-color: black !important;
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}*/
-
-/* Sticky footer styles
--------------------------------------------------- */
-/*html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {*/
-/* Margin bottom by footer height */
-/*margin-bottom: 60px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.footer {
-    color: white !important;
-    background-color: black !important;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 60px;
-    white-space: nowrap;
-    line-height: 60px;*/ /* Vertically center the text there */
-/*}
-
-
-input, textarea {
-    font-size: 18px;
-    width: 200px;
-    position: center;
-}
-
-    input[type=submit] {
-        width: auto;
-    }
-
-label {
-    font-size: 16px;
-    position: center;
-}
-
-#theForm {
-    background-color: lightgray;
-    position: center;
-}
-
-    #theForm input[type="submit"] {
-        background-color: forestgreen;
-        color: white;
-    }
-
-ul.recipe-props {
-    font-size: small;
-    position: center;
-}
-
-    ul.recipe-props li {
-        list-style-type: none;
-    }
-
-.recipe-info {
-    border: 2px solid white;
-    display: inline-block;
-    padding: 8px 8px;
-    margin: 2px;
-    width: 450px;
-    background-color: lightgray;
-    border-radius: 20px;
-    position: center;
-}
-
-    .recipe-info img {
-        margin: 5px;
-        width: 200px;
-        height: 200px;
-        object-fit: cover;
-        overflow: hidden;
-        float: left;
-        border: 2px solid white;
-        border-radius: 20px;
-        max-width: 200px;
-    }
-
-#loginToggle {
-    cursor: pointer;
-    position: center;
-}
-
-.popup-form {
-    padding: 5px;
-    border: 2px white inset;
-    display: inline-block;
-    position: center;
-}
-
-    .popup-form input {
-        width: 200px
-    }
-
-        .popup-form input[type=checkbox], input[type=submit] {
-            width: auto;
-        }
-
-    .popup-form label {
-        width: 150px;
-        display: inline-block;
-    }*/
